--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
 <p id="output"></p>
 <script>
 /* Create an array */
+
+let array = ["Is", "it", "real", "or", "is", "it", "cake"]
+
 /* Create function that concatenates array into 
 a sentence (adding spaces between words), and 
 outputs the result to '<p id="output"><p>' innerHTML */
+
+function generateSentence() {
+    for(let i = 0; i < array.length; i++) {
+        const concatArray = array.join(' ')
+        document.getElementById("output").textContent = concatArray
+    }
+}
+
 /* Add an event listener to generateBtn.
 When clicked, the generateBtn should execute 
 the generateSentence function, displaying the sentence. */
+
+document.getElementById("generateBtn").addEventListener("click", generateSentence)
+
 </script>
 </body>
 </html>
